k8s-advanced/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: food-delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tahoordocker/fda-backend:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: food-delivery
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30001
  type: NodePort
